[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets_industrial_proj/industrial.v2.png" type="Texture" id=1]
[ext_resource path="res://assets_industrial_proj/light2.png" type="Texture" id=2]
[ext_resource path="res://src/Player.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 16, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 48, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 80, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 96, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 112, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 16, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 32, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 64, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 16, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 32, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 48, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 64, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 80, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 96, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 112, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 96, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 16, 16 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "land_anim",
"speed": 12.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "idle_anim",
"speed": 1.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "jump_anim",
"speed": 6.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "walk_anim",
"speed": 12.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "fall_anim",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 5.56214, 7.31371 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
energy = 0.9
range_layer_min = -512
range_layer_max = 512
shadow_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.2, 0.2 )
limit_left = 0
limit_top = -576
limit_right = 1184
limit_bottom = 0
limit_smoothed = true
smoothing_enabled = true
drag_margin_left = 0.25
drag_margin_top = 0.25
drag_margin_right = 0.25
drag_margin_bottom = 0.25
editor_draw_drag_margin = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -9.2365, -12.2747 )
scale = Vector2( 1.231, 1.231 )
frames = SubResource( 21 )
animation = "land_anim"
frame = 6
centered = false

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
shape = SubResource( 22 )

[node name="SpikeDetector" type="Area2D" parent="."]

[node name="CollisionShape2D5" type="CollisionShape2D" parent="SpikeDetector"]
shape = SubResource( 22 )

[node name="ghost_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="area_entered" from="SpikeDetector" to="." method="_on_SpikeDetector_area_entered"]
[connection signal="timeout" from="ghost_timer" to="." method="_on_ghost_timer_timeout"]
